--- a/index.html
+++ b/index.html
@@ -335,25 +335,25 @@ desfruta de sabores deliciosos.
         <div class="footer__col">
           <h4>Social</h4>
           <ul class="footer__links">
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Youtube</a></li>
-            <li><a href="#">LinkedIn</a></li>
+            <li><a href="https://www.threads.com/@thalysondarosasilva">threads</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=61553328156827&locale=pt_BR">Facebook</a></li>
+            <li><a href="https://www.youtube.com/@thalyson9993">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/in/thalyson-jos%C3%A9-da-rosa-silva-712a49273/">LinkedIn</a></li>
           </ul>
         </div>
         <div class="footer__col">
           <h4>Legal</h4>
           <ul class="footer__links">
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Privacy</a></li>
+            <li><a href="#">termos</a></li>
+            <li><a href="#">Privacidade</a></li>
             <li><a href="#">Cookies</a></li>
-            <li><a href="#">Licenses</a></li>
-            <li><a href="#">Settings</a></li>
+            <li><a href="#">Liçensas</a></li>
+            <li><a href="#">configurações</a></li>
           </ul>
         </div>
       </div>
       <div class="footer__bar">
-        Copyright © 2024 Web Design Mastery. All rights reserved.
+       Copyright © 2025 Thalyson Jose da Rosa Silva. Todos os direitos reservados.
       </div>
     </footer>
 
