--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design Mastery | Falcon</title>
+    <title>restaurante</title>
   </head>
   <body>
     <nav>
       <div class="nav__header">
         <div class="nav__logo">
           <a href="#">
-            <img src="assets/logo-white.png" alt="logo" class="logo-white" />
-            <img src="assets/logo-dark.png" alt="logo" class="logo-dark" />
+            <img src="ativos/logo-white.png" alt="logo" class="logo-white" />
+            <img src="ativos/logo-dark.png" alt="logo" class="logo-dark" />
           </a>
         </div>
         <div class="nav__menu__btn" id="menu-btn">
@@ -42,16 +42,16 @@
     <header class="section__container header__container" id="home">
       <div class="header__image">
         <div class="image">
-          <img src="assets/header.png" alt="header" />
+          <img src="ativos/header.png" alt="header" />
         </div>
         <div class="header__image__footer">
-          <img src="assets/user-1.jpg" alt="user" />
+          <img src="ativos/user-1.jpg" alt="user" />
           <p>oferecemos entrega rapida e sabor inesquecivel</p>
         </div>
       </div>
       <div class="header__content">
         <div class="header__top">
-          <span><img src="assets/header.png" alt="header" /></span>
+          <span><img src="ativos/header.png" alt="header" /></span>
           <h2>Alimente-se de forma saudável, mantenha-se saudável.</h2>
         </div>
         <h1>seja o <span>primeiro</span> Entrega e retirada fácil</h1>
@@ -67,15 +67,15 @@
         </div>
         <div class="header__flex">
           <div class="header__card">
-            <img src="assets/header_content-1.jpg" alt="header__content" />
+            <img src="ativos/header_content-1.jpg" alt="header__content" />
             <h4>Biryani de Frango</h4>
           </div>
           <div class="header__card">
-            <img src="assets/header_content-2.jpg" alt="header__content" />
+            <img src="ativos/header_content-2.jpg" alt="header__content" />
             <h4>Handi Mutton</h4>
           </div>
           <div class="header__card">
-            <img src="assets/header_content-1.jpg" alt="header__content" />
+            <img src="ativos/header_content-1.jpg" alt="header__content" />
             <h4>Kala Bhuna</h4>
           </div>
         </div>
@@ -86,7 +86,7 @@
       <h2 class="section__header">nossos pratos populares <span>Pratos</span></h2>
       <div class="menu__grid">
         <div class="menu__card">
-          <img src="assets/menu-1.jpg" alt="menu" />
+          <img src="ativos/menu-1.jpg" alt="menu" />
           <h4>Kala Bhuna</h4>
           <p>
             Um prato de carne bovina cozido lentamente, rico e saboroso, infundido com especiarias aromáticas
@@ -98,7 +98,7 @@ para um sabor tradicional.
           </div>
         </div>
         <div class="menu__card">
-          <img src="assets/menu-2.jpg" alt="menu" />
+          <img src="ativos/menu-2.jpg" alt="menu" />
           <h4>Handi Mutton</h4>
           <p>
             Carneiro tenro cozido lentamente até ficar perfeito em uma panela com uma mistura de especiarias para
@@ -110,7 +110,7 @@ uma refeição autêntica e reconfortante.
           </div>
         </div>
         <div class="menu__card">
-          <img src="assets/menu-3.jpg" alt="menu" />
+          <img src="ativos/menu-3.jpg" alt="menu" />
           <h4>Egg Curry</h4>
           <p>
             Ovos cozidos mergulhados em um molho de curry rico e picante, combinando sabores tradicionais
@@ -135,7 +135,7 @@ uma refeição autêntica e reconfortante.
         <div class="service__grid">
           <div class="service__card">
             <div>
-              <img src="assets/service-1.png" alt="service" />
+              <img src="ativos/service-1.png" alt="service" />
             </div>
             <h4>Escolha suas refeições</h4>
             <p>
@@ -149,7 +149,7 @@ e selecione seus favoritos sem esforço para satisfazer seus desejos.
           </div>
           <div class="service__card">
             <div>
-              <img src="assets/service-2.png" alt="service" />
+              <img src="ativos/service-2.png" alt="service" />
             </div>
             <h4>Acompanhe seu pedido</h4>
             <p>
@@ -163,7 +163,7 @@ até sua localização, garantindo uma experiência perfeita e transparente.
           </div>
           <div class="service__card">
             <div>
-              <img src="assets/service-3.png" alt="service" />
+              <img src="ativos/service-3.png" alt="service" />
             </div>
             <h4>Escolha suas refeições</h4>
             <p>
@@ -182,7 +182,7 @@ entrega em domicílio, levando suas refeições favoritas diretamente para você
     <section class="banner" id="cart">
       <div class="section__container banner__container">
         <div class="banner__image">
-          <img src="assets/banner.jpg" alt="banner" />
+          <img src="ativos/banner.jpg" alt="banner" />
         </div>
         <div class="banner__content">
           <h2 class="section__header">
@@ -206,7 +206,7 @@ desfruta de sabores deliciosos.
 
     <section class="section__container customer__container">
       <div class="customer__image">
-        <img src="assets/customer.png" alt="customer" />
+        <img src="ativos/customer.png" alt="customer" />
       </div>
       <div class="customer__content">
         <h2 class="section__header">Clientes<span>Reação</span></h2>
@@ -227,7 +227,7 @@ desfruta de sabores deliciosos.
                     sabor!
                 </p>
                 <div class="customer__card__footer">
-                  <img src="assets/customer-1.jpg" alt="customer" />
+                  <img src="ativos/customer-1.jpg" alt="customer" />
                   <div>
                     <h4>Sarah Johnson</h4>
                     <h5>Nutricionista</h5>
@@ -254,7 +254,7 @@ desfruta de sabores deliciosos.
                     fazer escolhas alimentares melhores.
                 </p>
                 <div class="customer__card__footer">
-                  <img src="assets/customer-2.jpg" alt="customer" />
+                  <img src="ativos/customer-2.jpg" alt="customer" />
                   <div>
                     <h4>Rajesh Patel</h4>
                     <h5>Engenheiro de Software</h5>
@@ -281,7 +281,7 @@ desfruta de sabores deliciosos.
                     tornando cada experiência agradável.
                 </p>
                 <div class="customer__card__footer">
-                  <img src="assets/customer-3.jpg" alt="customer" />
+                  <img src="ativos/customer-3.jpg" alt="customer" />
                   <div>
                     <h4>Emily Brown</h4>
                     <h5>Personal Trainer</h5>
@@ -314,7 +314,7 @@ desfruta de sabores deliciosos.
       <div class="section__container footer__container">
         <div class="footer__col">
           <a href="#" class="footer__logo">
-            <img src="assets/logo-dark.png" alt="logo" />
+            <img src="ativos/logo-dark.png" alt="logo" />
           </a>
           <p>
             Nosso objetivo é proporcionar uma experiência culinária excepcional,
